# reconnoiter

./: .gitignore  BUILDING  BUILDING.md  LICENSE  Makefile.in  README  README.md  THIRDPARTY-LIBS.md  aclocal.m4  arch.noitd.html  arch.overview.html  arch.stratcond.html  config.generic.html  config.noitd.html  config.noitd.modules.html  config.stratcond.html  config.stratcond.modules.html  configuration.html  configure.in  dev.reconnoiter.html  exe.html  executable.noitd.html  executable.stratcond.html  index.html  introduction.html  operation.html  operation.noitd.html  project.config  pt01.html  pt04.html  reference.html  singlepage.html  snmp-c.patch  the.index.html  trusty-snmp-c.patch
assets/: NoitLogo_MonoPrint.ai
buildtools/: asan-build.sh  asan-rebuild.sh  build-clean.sh  build.sh  ci-asan.sh  ci-ubsan.sh  culldeps.sh  determine-os.sh  docker.sh  freshen-ca-bundle.sh  license-audit  local-build.sh  local-install.sh  local-rebuild.sh  local-runtests.sh  mkcodedocs.pl  mkversion.sh  version.java  xml2h
buildtools/el7/: Dockerfile-base  Dockerfile-build  Dockerfile-run  cmd.sh  configure.sh  el7-Circonus.repo  env-asan.inc  env.inc  env.sh  install-dependencies.sh
buildtools/u1804/: configure.sh  env.inc  install-dependencies.sh
buildtools/u2004/: configure.sh  env-asan.inc  env.inc  install-dependencies.sh
buildtools/u2204/: env-asan.inc  env-gcc12.inc  env-ubsan.inc  env.inc  install-dependencies.sh
debian/: changelog  copyright  noit.install  noit.upstart  rules  stratcon.install
debug/: gdb-load-py  gdb-stratcon.py
docs/: BUILDING  Makefile  docbuild.conf  doxygen.config  index.xml  preface.xml
docs/arch/: an_overview.xml  index.xml  noitd.xml  stratcond.xml
docs/assets/: NoitLogo.ai
docs/config/: Makefile  generic.xml  index.xml  inventory.lst  noitd.xml  noitd_modules.xml  stratcond.xml  stratcond_modules.xml
docs/development/: dev.xml  internals.xml  modules_in_c.xml  modules_in_java.xml  modules_in_lua.xml
docs/docbook-xsl/: catalog.xml
docs/executable/: index.xml  noitd.xml  stratcond.xml
docs/operation/: index.xml  noitd.xml
patches/: README.md  ck-cpp_compat.patch  flatcc.patch  picklingtools-Makefile.Linux.factored.patch  picklingtools-warnings.patch  protobuf-c.patch  snmp-c.patch  udns.patch
pkg/: build-debian.sh
pkg/debian/: changelog  control  noit.install  rules  stratcon.cron.d  stratcon.install  stratcon.upstart
sql/: Makefile.in  README  build_ddl.pl  crontab  dblayout.txt  dump.sh  reconnoiter_ddl_dump.sql  scaffolding.sql  schema.sql  split.prism.dump.to.sprocs.pl
sql/sprocs/: noit.check_archive_log_changes.sql  noit.check_status_archive_log_changes.sql  noit.choose_window.sql  noit.date_hour.sql  noit.fetch_dataset.sql  noit.mark_metric_numeric_rollup_buffer.sql  noit.metric_text_archive_log_changes.sql  noit.update_check_currently.sql  noit.update_metric_summary_fulltext.sql  noit.update_mns_via_check_currently.sql  noit.update_mns_via_check_tag.sql  noit.update_mns_via_metric_tag.sql  noit.update_mns_via_self.sql  prism.add_graph_tags.sql  prism.add_tags.sql  prism.check_name_saved_graphs.sql  prism.remove_graph_tags.sql  prism.remove_tags.sql  prism.saved_graphs_tsvector.sql  prism.trig_update_tsvector_saved_graphs.sql  rollup_metric_numeric_generic.sql  stratcon.archive_part_maint.sql  stratcon.choose_window.sql  stratcon.delete_metrics.sql  stratcon.drop_old_metrics.sql  stratcon.fetch_dataset.sql  stratcon.fetch_varset.sql  stratcon.get_storage_node_for_sid.sql  stratcon.init_metric_numeric_rollup.sql  stratcon.init_metric_numeric_rollup_5m.sql  stratcon.init_rollup_matrix_numeric_5m.sql  stratcon.map_uuid_to_sid.sql  stratcon.metric_name_summary_compile_fts_data.sql  stratcon.metric_name_summary_tsvector.sql  stratcon.parent_empty.sql  stratcon.rollup_metric_numeric.sql  stratcon.rollup_metric_numeric_5m.sql  stratcon.rollup_metric_numeric_generic.sql  stratcon.running_derive.sql  stratcon.unroll_metric_numeric.sql  (+3 more)
sql/tables/: login.register.sql  noit.check_archive.sql  noit.check_changelog.sql  noit.check_currently.sql  noit.check_status_archive.sql  noit.check_status_changelog.sql  noit.check_tag.sql  noit.metric_name_summary.sql  noit.metric_numeric_archive.sql  noit.metric_numeric_rollup_12hours.sql  noit.metric_numeric_rollup_1day.sql  noit.metric_numeric_rollup_20m.sql  noit.metric_numeric_rollup_30m.sql  noit.metric_numeric_rollup_4h.sql  noit.metric_numeric_rollup_5m.sql  noit.metric_numeric_rollup_60m.sql  noit.metric_numeric_rollup_6hours.sql  noit.metric_numeric_rollup_buffer.sql  noit.metric_numeric_rollup_config.sql  noit.metric_numeric_rollup_queue.sql  noit.metric_tag.sql  noit.metric_text_archive.sql  noit.metric_text_changelog.sql  noit.metric_text_currently.sql  noit.tasklock.sql  noit.tasklock_sequence.sql  prism.graph_templates.sql  (+12 more)
src/: .gdbinit  .noit_websocket_handler.c.swp  Makefile.dep  Makefile.in  Makefile.noit.dep  Makefile.objs.in  Makefile.stratcon.dep  README.txt  btrie.c  btrie.h  bundle.pb-c.c  bundle.pb-c.h  bundle.proto  bundle.thrift  config_templates.conf  default-ca-chain.crt  dtrace_probes.d  dtrace_probes.h  dtrace_probes.h.stock  et.conf  libnoit.c  libnoit.h  libnoit_dtrace_probes.d  libnoit_dtrace_probes.h.stock  map64bit  noit.conf  noit.conf.in  noit_acl.c  noit_acl.h  noit_b2sm.c  noit_capabilities_listener.c  noit_capabilities_listener.h  noit_check.c  noit_check.h  noit_check_lmdb.c  noit_check_lmdb.h  noit_check_log.c  noit_check_log.h  noit_check_log_helpers.c  noit_check_log_helpers.h  (+104 more)
src/jlog/: LICENSE  Makefile.dep  Makefile.in  configure.in  jlog.c  jlog.h  jlog_change_endian.pl  jlog_config.h.in  jlog_hash.c  jlog_io.c  jlog_io.h  jlog_private.h  jlog_sanity_check.pl  jlogctl.c  jlogtail.c  jtest.c  jthreadtest.c
src/jlog/perl/: Changes  JLog.xs  MANIFEST  Makefile.PL.in  README  ppport.h  typemap
src/jlog/perl/lib/: JLog.pm
src/jlog/perl/lib/JLog/: Reader.pm  Writer.pm
src/jlog/perl/t/: 1.t
src/jlog/php/: config.m4  jlog.c  package.xml  package2.xml  php_jlog.h
test/: Makefile  Makefile.in  demo-openssl.cnf  test_tags.c  test_tags.cpp
(+871 files in other folders)
